<resources>
    <string name="app_name">EShop</string>
    <string name="app_version">V 1.0.0</string>
    <string name="app_copyright">@ Ravee_C3</string>
    <string name="search_hint">Search</string>
    <string name="bottom_nave_home_title">Home</string>
    <string name="bottom_nav_categoty_title">Category</string>
    <string name="bottom_nave_cart_title">Cart</string>
    <string name="bottom_nave_profile_title">Profile</string>
    <string name="side_nave_home_title">Home</string>
    <string name="side_nav_categoty_title">Category</string>
    <string name="side_nave_cart_title">Cart</string>
    <string name="side_nave_profile_title">Profile</string>
    <string name="side_nave_message_title">Message</string>
    <string name="side_nave_setting_title">Setting</string>
    <string name="side_nave_login_title">Login</string>
    <string name="side_nave_logout_title">Log Out</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
