<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomNavHome"
        android:title="@string/bottom_nave_home_title"
        android:icon="@drawable/baseline_home_icon"
        />
    <item
        android:id="@+id/bottomNavCategory"
        android:title="@string/bottom_nav_categoty_title"
        android:icon="@drawable/baseline_view_list_icon"
        />
    <item
        android:id="@+id/bottomNavCart"
        android:title="@string/bottom_nave_cart_title"
        android:icon="@drawable/baseline_shopping_cart_icon"
        />
    <item
        android:id="@+id/bottomNavProfile"
        android:title="@string/bottom_nave_profile_title"
        android:icon="@drawable/baseline_person_icon"
        />
</menu>